Inisialisasi rombak section 5.

--- a/Notebook/05_Customer or Stakeholder Acceptance.ipynb
+++ b/Notebook/05_Customer or Stakeholder Acceptance.ipynb
@@ -10,10 +10,82 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34b60e89",
+   "id": "9238e6cc",
    "metadata": {},
    "source": [
-    "Refer ke bagian 03_Modeling.ipynb, sebab jika ditulis di sini malah jadi redundan."
+    "### 5.1 Business Understanding\n",
+    "\n",
+    "Pasar mobil bekas di Arab Saudi terus berkembang seiring meningkatnya kebutuhan kendaraan pribadi dan kemudahan transaksi melalui platform digital. Namun, penentuan harga mobil bekas masih menjadi tantangan karena dipengaruhi oleh banyak faktor seperti merek, tipe, tahun produksi, kondisi kendaraan, jarak tempuh, dan wilayah penjualan. Ketidaktepatan harga dapat menyebabkan mobil sulit terjual, merugikan penjual, atau membuat pembeli membayar di atas harga pasar.\n",
+    "\n",
+    "Proyek ini bertujuan untuk membangun **model machine learning regresi** yang mampu memprediksi **harga wajar mobil bekas di Arab Saudi** berdasarkan karakteristik kendaraan. Model diharapkan dapat membantu berbagai pemangku kepentingan, termasuk penjual dalam menentukan harga listing yang kompetitif, pembeli dalam menilai kewajaran harga, serta platform marketplace dalam menyediakan insight dan rekomendasi harga berbasis data.\n",
+    "\n",
+    "Pendekatan yang digunakan mengikuti kerangka **Team Data Science Process (TDSP)**, dimulai dari pemahaman masalah bisnis, eksplorasi dan pemrosesan data, pengembangan dan evaluasi model, hingga tahap deployment. Keberhasilan proyek diukur menggunakan metrik regresi yang berfokus pada akurasi prediksi harga, terutama **Mean Absolute Error (MAE)** dan **Mean Absolute Percentage Error (MAPE)**, karena keduanya mudah diinterpretasikan dalam konteks bisnis dan langsung merepresentasikan selisih harga aktual dan prediksi.\n",
+    "\n",
+    "Dataset yang digunakan merepresentasikan listing mobil bekas di Arab Saudi dengan berbagai fitur numerik dan kategorikal yang relevan terhadap pembentukan harga. Dengan membangun model prediktif yang andal, proyek ini diharapkan dapat memberikan nilai tambah nyata dalam mendukung pengambilan keputusan berbasis data pada ekosistem jual beli mobil bekas. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b22d5e5b",
+   "metadata": {},
+   "source": [
+    "### 5.2. Data Acquisition and Understanding\n",
+    "\n",
+    "Dataset yang digunakan dalam proyek ini diperoleh dari platform **Kaggle**, yang merepresentasikan data listing mobil bekas di Arab Saudi. Data mencakup informasi karakteristik kendaraan seperti merek, tipe, tahun produksi, asal kendaraan, warna, opsi fitur, ukuran mesin, jenis bahan bakar, tipe transmisi, jarak tempuh, wilayah penjualan, serta harga yang tercantum. Dataset ini dirancang untuk merefleksikan kondisi pasar mobil bekas secara nyata pada platform jual beli daring.\n",
+    "\n",
+    "Pada tahap awal, dilakukan pemahaman struktur data untuk mengidentifikasi tipe variabel, jumlah observasi, serta potensi permasalahan kualitas data. Fitur dalam dataset terdiri dari kombinasi **variabel numerik** dan **kategorikal**, yang masing-masing memiliki peran penting dalam pembentukan harga. Variabel target dalam proyek ini adalah **Price**, sedangkan fitur lain diperlakukan sebagai prediktor.\n",
+    "\n",
+    "Analisis kualitas data menunjukkan adanya **missing values**, inkonsistensi tipe data, serta potensi duplikasi dan outlier, terutama pada variabel harga dan jarak tempuh. Oleh karena itu, tahap ini juga mencakup eksplorasi awal distribusi data dan hubungan antarvariabel untuk memahami pola umum serta mendeteksi anomali yang dapat memengaruhi performa model.\n",
+    "\n",
+    "Pemahaman data yang komprehensif pada tahap ini menjadi dasar bagi proses pembersihan data, rekayasa fitur, dan pemodelan selanjutnya. Dengan memastikan data yang digunakan relevan, konsisten, dan merepresentasikan kondisi bisnis yang sebenarnya, risiko bias dan kesalahan prediksi pada tahap modeling dapat diminimalkan. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f95eff42",
+   "metadata": {},
+   "source": [
+    "### 5.3. Modeling\n",
+    "\n",
+    "Pada tahap modeling, dilakukan pengembangan dan evaluasi beberapa model regresi untuk memprediksi harga mobil bekas berdasarkan fitur kendaraan yang telah dibersihkan dan diproses pada tahap sebelumnya. Proses ini mencakup pemisahan data menjadi data latih dan data uji guna memastikan evaluasi performa model dilakukan secara objektif terhadap data yang belum pernah dilihat sebelumnya.\n",
+    "\n",
+    "Beberapa algoritma regresi diuji sebagai baseline dan pembanding, dengan pendekatan yang konsisten terhadap preprocessing fitur numerik dan kategorikal. Pipeline pemodelan dirancang untuk menangani imputasi nilai hilang, encoding variabel kategorikal, serta normalisasi fitur numerik jika diperlukan, sehingga seluruh proses dapat direproduksi secara end-to-end.\n",
+    "\n",
+    "Evaluasi model difokuskan pada metrik yang relevan secara bisnis, terutama **Mean Absolute Error (MAE)** dan **Mean Absolute Percentage Error (MAPE)**, karena metrik ini secara langsung merepresentasikan selisih harga prediksi terhadap harga aktual dalam satuan dan persentase yang mudah dipahami oleh stakeholder non-teknis. Nilai **R²** digunakan sebagai metrik pendukung untuk melihat kemampuan model dalam menjelaskan variasi data, namun tidak dijadikan metrik utama pengambilan keputusan.\n",
+    "\n",
+    "Model terbaik dipilih berdasarkan keseimbangan antara akurasi prediksi, stabilitas performa pada data uji, dan kompleksitas model. Model terpilih kemudian disimpan dan dipersiapkan untuk tahap deployment, dengan asumsi bahwa performa yang dicapai telah memenuhi kriteria keberhasilan yang ditetapkan pada tahap Business Understanding. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ff9e116",
+   "metadata": {},
+   "source": [
+    "### 5.4. Deployment\n",
+    "\n",
+    "Pada tahap deployment, model terbaik yang telah dipilih pada fase modeling disiapkan untuk digunakan dalam konteks operasional. Model disimpan dalam format ter-serialisasi sehingga dapat dimuat kembali tanpa perlu melakukan proses training ulang, memungkinkan penggunaan yang efisien dan konsisten di lingkungan produksi maupun analisis lanjutan.\n",
+    "\n",
+    "Proses deployment difokuskan pada bagaimana model dapat digunakan untuk menghasilkan prediksi harga secara praktis berdasarkan input karakteristik kendaraan. Dengan pendekatan ini, model dapat diintegrasikan ke dalam sistem analitik, aplikasi internal, atau pipeline data untuk mendukung pengambilan keputusan berbasis data.\n",
+    "\n",
+    "Selain penyimpanan model, tahap ini juga memastikan bahwa struktur input data pada saat inferensi konsisten dengan data yang digunakan saat training, baik dari sisi fitur, urutan kolom, maupun preprocessing yang diterapkan. Hal ini penting untuk meminimalkan risiko kesalahan prediksi akibat perbedaan format atau distribusi data.\n",
+    "\n",
+    "Deployment pada proyek ini diposisikan sebagai fondasi awal, yang masih dapat dikembangkan lebih lanjut, misalnya dengan integrasi ke API, dashboard interaktif, atau sistem monitoring performa model. Dengan demikian, model tidak hanya berfungsi sebagai hasil eksperimen, tetapi juga sebagai aset analitik yang siap digunakan dan dikembangkan sesuai kebutuhan bisnis. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7493510f",
+   "metadata": {},
+   "source": [
+    "### 5.5. Customer / Stakeholder Acceptance\n",
+    "\n",
+    "Tahap Customer / Stakeholder Acceptance bertujuan untuk memastikan bahwa model yang telah dikembangkan benar-benar menjawab kebutuhan bisnis yang didefinisikan pada tahap Business Understanding. Fokus utama pada fase ini bukan lagi pada pengembangan model, melainkan pada **validasi nilai bisnis**, interpretabilitas hasil, dan kesiapan model untuk digunakan oleh stakeholder.\n",
+    "\n",
+    "Evaluasi performa model pada tahap ini mengacu langsung pada hasil dan metrik yang telah ditetapkan pada fase modeling. Dengan performa yang memenuhi kriteria keberhasilan, model dinilai telah mampu memberikan estimasi harga yang cukup akurat dan stabil untuk digunakan sebagai acuan harga wajar mobil bekas di pasar Arab Saudi. Oleh karena itu, tahap ini tidak melakukan pelatihan ulang atau eksperimen tambahan, melainkan memanfaatkan model final yang telah disepakati.\n",
+    "\n",
+    "Selain metrik kuantitatif, perhatian juga diberikan pada potensi sumber error dan keterbatasan model, seperti kondisi kendaraan yang tidak sepenuhnya tercermin dalam data atau variasi pasar yang bersifat temporal. Insight ini penting agar stakeholder memahami konteks penggunaan model dan tidak menginterpretasikan hasil prediksi secara absolut.\n",
+    "\n",
+    "Secara keseluruhan, model dinilai **layak diterima (accepted)** sebagai alat bantu pengambilan keputusan berbasis data. Model siap untuk di-*handoff* ke tahap operasional atau dikembangkan lebih lanjut, misalnya melalui integrasi ke aplikasi, dashboard, atau sistem monitoring, sesuai dengan kebutuhan bisnis dan tingkat kematangan solusi analitik yang diinginkan."
    ]
   }
  ],
