--- a/Notebook/05_Customer or Stakeholder Acceptance.ipynb
+++ b/Notebook/05_Customer or Stakeholder Acceptance.ipynb
@@ -10,82 +10,72 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9238e6cc",
-   "metadata": {},
+   "id": "78de2d87",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "source": [
-    "### 5.1 Business Understanding\n",
-    "\n",
-    "Pasar mobil bekas di Arab Saudi terus berkembang seiring meningkatnya kebutuhan kendaraan pribadi dan kemudahan transaksi melalui platform digital. Namun, penentuan harga mobil bekas masih menjadi tantangan karena dipengaruhi oleh banyak faktor seperti merek, tipe, tahun produksi, kondisi kendaraan, jarak tempuh, dan wilayah penjualan. Ketidaktepatan harga dapat menyebabkan mobil sulit terjual, merugikan penjual, atau membuat pembeli membayar di atas harga pasar.\n",
-    "\n",
-    "Proyek ini bertujuan untuk membangun **model machine learning regresi** yang mampu memprediksi **harga wajar mobil bekas di Arab Saudi** berdasarkan karakteristik kendaraan. Model diharapkan dapat membantu berbagai pemangku kepentingan, termasuk penjual dalam menentukan harga listing yang kompetitif, pembeli dalam menilai kewajaran harga, serta platform marketplace dalam menyediakan insight dan rekomendasi harga berbasis data.\n",
-    "\n",
-    "Pendekatan yang digunakan mengikuti kerangka **Team Data Science Process (TDSP)**, dimulai dari pemahaman masalah bisnis, eksplorasi dan pemrosesan data, pengembangan dan evaluasi model, hingga tahap deployment. Keberhasilan proyek diukur menggunakan metrik regresi yang berfokus pada akurasi prediksi harga, terutama **Mean Absolute Error (MAE)** dan **Mean Absolute Percentage Error (MAPE)**, karena keduanya mudah diinterpretasikan dalam konteks bisnis dan langsung merepresentasikan selisih harga aktual dan prediksi.\n",
-    "\n",
-    "Dataset yang digunakan merepresentasikan listing mobil bekas di Arab Saudi dengan berbagai fitur numerik dan kategorikal yang relevan terhadap pembentukan harga. Dengan membangun model prediktif yang andal, proyek ini diharapkan dapat memberikan nilai tambah nyata dalam mendukung pengambilan keputusan berbasis data pada ekosistem jual beli mobil bekas. "
+    "## 5.1 Konklusi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b22d5e5b",
-   "metadata": {},
+   "id": "10911004",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "source": [
-    "### 5.2. Data Acquisition and Understanding\n",
+    "Pesatnya pertumbuhan pasar mobil bekas di Arab Saudi, yang didorong oleh meningkatnya kebutuhan kendaraan pribadi dan percepatan digitalisasi melalui platform seperti **Syarah.com**, menimbulkan tantangan utama dalam penentuan harga mobil yang wajar akibat tingginya variasi kondisi kendaraan. Untuk menjawab tantangan tersebut, proyek ini bertujuan membangun **model machine learning berbasis regresi** yang mampu memprediksi harga wajar mobil bekas berdasarkan fitur penting seperti merek, tipe, tahun produksi, ukuran mesin, jarak tempuh, region, dan opsi kendaraan, sehingga dapat mendukung pengambilan keputusan bagi penjual, pembeli, dan platform secara objektif dan terukur. Keberhasilan model dievaluasi menggunakan metrik **MAE** dan **MAPE**, dengan target awal MAE tidak melebihi 20% dari median harga sebagai indikator akurasi yang relevan secara bisnis.\n",
     "\n",
-    "Dataset yang digunakan dalam proyek ini diperoleh dari platform **Kaggle**, yang merepresentasikan data listing mobil bekas di Arab Saudi. Data mencakup informasi karakteristik kendaraan seperti merek, tipe, tahun produksi, asal kendaraan, warna, opsi fitur, ukuran mesin, jenis bahan bakar, tipe transmisi, jarak tempuh, wilayah penjualan, serta harga yang tercantum. Dataset ini dirancang untuk merefleksikan kondisi pasar mobil bekas secara nyata pada platform jual beli daring.\n",
+    "Proses menyeluruh dalam mengenali, mengevaluasi, dan menyiapkan dataset **Saudi Arabia Used Cars** dari Kaggle yang berisi lebih dari 8.000 data mobil bekas, mencakup fitur numerik dan kategorikal seperti harga, tahun, jarak tempuh, ukuran mesin, merek, tipe, region, dan spesifikasi kendaraan. Tahapan yang dilakukan meliputi pemahaman struktur data, analisis statistik deskriptif, identifikasi nilai unik dan *high-cardinality*, pemeriksaan *missing values* (dengan fokus utama pada **Engine_Size**), serta analisis distribusi dan normalitas variabel numerik seperti *Year, Mileage,* dan *Price* yang menunjukkan pola *right-skewed* dan keberadaan outlier signifikan. Data kemudian dibersihkan melalui imputasi yang konservatif, penghapusan kolom tidak relevan, penghapusan duplikat, serta penanganan outlier menggunakan metode **IQR** agar distribusi data lebih representatif dan stabil. Selanjutnya dilakukan konversi tipe data, *feature engineering* non-target seperti **Car_Age** dan **Mileage_per_Year.**\n",
     "\n",
-    "Pada tahap awal, dilakukan pemahaman struktur data untuk mengidentifikasi tipe variabel, jumlah observasi, serta potensi permasalahan kualitas data. Fitur dalam dataset terdiri dari kombinasi **variabel numerik** dan **kategorikal**, yang masing-masing memiliki peran penting dalam pembentukan harga. Variabel target dalam proyek ini adalah **Price**, sedangkan fitur lain diperlakukan sebagai prediktor.\n",
+    "Proses pemodelan end-to-end untuk memprediksi harga mobil bekas menggunakan dataset yang telah dibersihkan, dimulai dari penentuan **target (Price)** dan fitur numerik serta kategorikal, pembagian data **train–test 80:20**, hingga pembangunan **pipeline preprocessing** yang memisahkan perlakuan fitur numerik (imputasi median dan *RobustScaler*) dan kategorikal (imputasi *most frequent* dan *One-Hot Encoding*) untuk mencegah data leakage. Beberapa algoritma regresi dievaluasi secara sistematis menggunakan **cross-validation** dengan metrik **MAE dan MAPE**, termasuk *Linear Regression*, *Random Forest*, *Gradient Boosting*, dan **XGBoost**, di mana XGBoost menunjukkan performa terbaik dan paling stabil secara akurasi serta efisiensi. Model terbaik kemudian ditingkatkan melalui **hyperparameter tuning (GridSearchCV)** yang menghasilkan penurunan MAE dan MAPE secara signifikan dibanding baseline, menandakan peningkatan kemampuan generalisasi. Selanjutnya, **SHAP analysis** digunakan untuk menginterpretasikan model, menunjukkan bahwa **Engine_Size, Year, Mileage, dan Car_Age** merupakan faktor paling dominan dalam menentukan harga, sementara beberapa merek dan tipe kendaraan memberikan kontribusi tambahan. Proses diakhiri dengan penyimpanan artefak **model final terlatih.**\n",
     "\n",
-    "Analisis kualitas data menunjukkan adanya **missing values**, inkonsistensi tipe data, serta potensi duplikasi dan outlier, terutama pada variabel harga dan jarak tempuh. Oleh karena itu, tahap ini juga mencakup eksplorasi awal distribusi data dan hubungan antarvariabel untuk memahami pola umum serta mendeteksi anomali yang dapat memengaruhi performa model.\n",
-    "\n",
-    "Pemahaman data yang komprehensif pada tahap ini menjadi dasar bagi proses pembersihan data, rekayasa fitur, dan pemodelan selanjutnya. Dengan memastikan data yang digunakan relevan, konsisten, dan merepresentasikan kondisi bisnis yang sebenarnya, risiko bias dan kesalahan prediksi pada tahap modeling dapat diminimalkan. "
+    "Penerapan model terbaik hasil tahap modeling ke dalam bentuk yang siap digunakan secara operasional, dimulai dengan memuat **pipeline XGBoost terlatih** yang telah terintegrasi penuh dengan preprocessing numerik dan kategorikal secara end-to-end. Model dimuat dari artefak hasil tuning dan digunakan melalui fungsi **predict_price**, yang menerima satu input data kendaraan dalam bentuk dictionary, melakukan *feature engineering* deterministik seperti perhitungan **Car_Age** dan **Mileage_per_Year**, menyelaraskan skema fitur dengan data training, serta menangani fitur yang hilang secara otomatis sebelum menghasilkan prediksi. Contoh implementasi menunjukkan bahwa model mampu memberikan estimasi **harga wajar pasar** yang konsisten dan realistis berdasarkan karakteristik kendaraan, sekaligus meminimalkan risiko data leakage dan inkonsistensi preprocessing. Dengan pendekatan ini, model siap digunakan untuk evaluasi lanjutan, integrasi sistem, maupun deployment sebagai layanan prediksi harga mobil bekas berbasis machine learning yang andal dan berorientasi bisnis."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f95eff42",
+   "id": "65b46e33",
    "metadata": {},
    "source": [
-    "### 5.3. Modeling\n",
-    "\n",
-    "Pada tahap modeling, dilakukan pengembangan dan evaluasi beberapa model regresi untuk memprediksi harga mobil bekas berdasarkan fitur kendaraan yang telah dibersihkan dan diproses pada tahap sebelumnya. Proses ini mencakup pemisahan data menjadi data latih dan data uji guna memastikan evaluasi performa model dilakukan secara objektif terhadap data yang belum pernah dilihat sebelumnya.\n",
-    "\n",
-    "Beberapa algoritma regresi diuji sebagai baseline dan pembanding, dengan pendekatan yang konsisten terhadap preprocessing fitur numerik dan kategorikal. Pipeline pemodelan dirancang untuk menangani imputasi nilai hilang, encoding variabel kategorikal, serta normalisasi fitur numerik jika diperlukan, sehingga seluruh proses dapat direproduksi secara end-to-end.\n",
-    "\n",
-    "Evaluasi model difokuskan pada metrik yang relevan secara bisnis, terutama **Mean Absolute Error (MAE)** dan **Mean Absolute Percentage Error (MAPE)**, karena metrik ini secara langsung merepresentasikan selisih harga prediksi terhadap harga aktual dalam satuan dan persentase yang mudah dipahami oleh stakeholder non-teknis. Nilai **R²** digunakan sebagai metrik pendukung untuk melihat kemampuan model dalam menjelaskan variasi data, namun tidak dijadikan metrik utama pengambilan keputusan.\n",
-    "\n",
-    "Model terbaik dipilih berdasarkan keseimbangan antara akurasi prediksi, stabilitas performa pada data uji, dan kompleksitas model. Model terpilih kemudian disimpan dan dipersiapkan untuk tahap deployment, dengan asumsi bahwa performa yang dicapai telah memenuhi kriteria keberhasilan yang ditetapkan pada tahap Business Understanding. "
+    "## 5.2 Limitasi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5ff9e116",
+   "id": "785d1aa1",
    "metadata": {},
    "source": [
-    "### 5.4. Deployment\n",
-    "\n",
-    "Pada tahap deployment, model terbaik yang telah dipilih pada fase modeling disiapkan untuk digunakan dalam konteks operasional. Model disimpan dalam format ter-serialisasi sehingga dapat dimuat kembali tanpa perlu melakukan proses training ulang, memungkinkan penggunaan yang efisien dan konsisten di lingkungan produksi maupun analisis lanjutan.\n",
-    "\n",
-    "Proses deployment difokuskan pada bagaimana model dapat digunakan untuk menghasilkan prediksi harga secara praktis berdasarkan input karakteristik kendaraan. Dengan pendekatan ini, model dapat diintegrasikan ke dalam sistem analitik, aplikasi internal, atau pipeline data untuk mendukung pengambilan keputusan berbasis data.\n",
-    "\n",
-    "Selain penyimpanan model, tahap ini juga memastikan bahwa struktur input data pada saat inferensi konsisten dengan data yang digunakan saat training, baik dari sisi fitur, urutan kolom, maupun preprocessing yang diterapkan. Hal ini penting untuk meminimalkan risiko kesalahan prediksi akibat perbedaan format atau distribusi data.\n",
-    "\n",
-    "Deployment pada proyek ini diposisikan sebagai fondasi awal, yang masih dapat dikembangkan lebih lanjut, misalnya dengan integrasi ke API, dashboard interaktif, atau sistem monitoring performa model. Dengan demikian, model tidak hanya berfungsi sebagai hasil eksperimen, tetapi juga sebagai aset analitik yang siap digunakan dan dikembangkan sesuai kebutuhan bisnis. "
+    "* Model memprediksi **harga listing**, bukan harga transaksi final, sehingga efek negosiasi belum tercermin.\n",
+    "* Informasi **kondisi teknis kendaraan terbatas**, sehingga kualitas aktual mobil belum sepenuhnya terwakili.\n",
+    "* Distribusi data **tidak seimbang** (merek, tahun, region dominan), sehingga performa pada kasus langka berpotensi lebih rendah.\n",
+    "* Model bersifat **statis dan asosiatif**, tanpa dimensi waktu atau analisis kausal.\n",
+    "* Deployment masih **tanpa monitoring dan retraining**, sehingga performa dapat menurun seiring waktu."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7493510f",
+   "id": "a5a1eac6",
    "metadata": {},
    "source": [
-    "### 5.5. Customer / Stakeholder Acceptance\n",
-    "\n",
-    "Tahap Customer / Stakeholder Acceptance bertujuan untuk memastikan bahwa model yang telah dikembangkan benar-benar menjawab kebutuhan bisnis yang didefinisikan pada tahap Business Understanding. Fokus utama pada fase ini bukan lagi pada pengembangan model, melainkan pada **validasi nilai bisnis**, interpretabilitas hasil, dan kesiapan model untuk digunakan oleh stakeholder.\n",
-    "\n",
-    "Evaluasi performa model pada tahap ini mengacu langsung pada hasil dan metrik yang telah ditetapkan pada fase modeling. Dengan performa yang memenuhi kriteria keberhasilan, model dinilai telah mampu memberikan estimasi harga yang cukup akurat dan stabil untuk digunakan sebagai acuan harga wajar mobil bekas di pasar Arab Saudi. Oleh karena itu, tahap ini tidak melakukan pelatihan ulang atau eksperimen tambahan, melainkan memanfaatkan model final yang telah disepakati.\n",
-    "\n",
-    "Selain metrik kuantitatif, perhatian juga diberikan pada potensi sumber error dan keterbatasan model, seperti kondisi kendaraan yang tidak sepenuhnya tercermin dalam data atau variasi pasar yang bersifat temporal. Insight ini penting agar stakeholder memahami konteks penggunaan model dan tidak menginterpretasikan hasil prediksi secara absolut.\n",
-    "\n",
-    "Secara keseluruhan, model dinilai **layak diterima (accepted)** sebagai alat bantu pengambilan keputusan berbasis data. Model siap untuk di-*handoff* ke tahap operasional atau dikembangkan lebih lanjut, misalnya melalui integrasi ke aplikasi, dashboard, atau sistem monitoring, sesuai dengan kebutuhan bisnis dan tingkat kematangan solusi analitik yang diinginkan."
+    "## 5.3 Rekomendasi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad003b96",
+   "metadata": {},
+   "source": [
+    "* Mengintegrasikan **data transaksi aktual dan histori negosiasi** untuk meningkatkan akurasi harga real-market.\n",
+    "* Menambahkan **fitur kondisi kendaraan yang lebih granular** (inspeksi, servis, kecelakaan) untuk representasi kualitas yang lebih baik.\n",
+    "* Melakukan **segment-based modeling** (per brand, region, atau price tier) untuk meningkatkan performa pada data tidak seimbang.\n",
+    "* Mengembangkan **time-aware modeling** (tren, inflasi, musiman) dan eksplorasi pendekatan kausal ringan.\n",
+    "* Menerapkan **monitoring model, data drift detection, dan retraining berkala** untuk menjaga performa pasca-deployment."
    ]
   }
  ],
