Rephrase section 1 lebih awam friendly.

--- a/Notebook/01_Business Understanding.ipynb
+++ b/Notebook/01_Business Understanding.ipynb
@@ -9,13 +9,13 @@
         "\n",
         "## 1.1 Latar Belakang\n",
         "\n",
-        "Pasar mobil bekas di Arab Saudi sedang mengalami pertumbuhan yang sangat pesat dalam beberapa tahun terakhir. Kenaikan ini dipicu oleh meningkatnya kebutuhan masyarakat terhadap kendaraan pribadi untuk menunjang mobilitas sehari-hari. Banyak penduduk di kota besar seperti Riyadh dan Jeddah yang lebih memilih memiliki mobil sendiri karena transportasi umum masih terbatas. Faktor lain seperti kenyamanan, fleksibilitas waktu, dan status sosial juga berperan dalam meningkatkan permintaan. Akibatnya, sektor mobil bekas menjadi salah satu segmen otomotif yang paling dinamis di negara tersebut.\n",
+        "Pasar mobil bekas di Arab Saudi terus berkembang pesat dalam beberapa tahun terakhir. Hal ini didorong oleh meningkatnya kebutuhan masyarakat akan kendaraan pribadi untuk aktivitas sehari-hari. Di kota-kota besar seperti Riyadh dan Jeddah, banyak orang memilih memiliki mobil sendiri karena keterbatasan transportasi umum. Selain itu, faktor kenyamanan, fleksibilitas waktu, dan gaya hidup juga ikut meningkatkan minat terhadap mobil pribadi. Kondisi ini membuat pasar mobil bekas menjadi salah satu sektor otomotif yang sangat aktif dan kompetitif.\n",
         "\n",
-        "Selain faktor permintaan, perkembangan teknologi digital juga berperan besar dalam mempercepat pertumbuhan pasar mobil bekas di Arab Saudi. Platform jual beli online seperti **Syarah.com** memudahkan penjual dan pembeli untuk bertransaksi tanpa harus datang ke dealer secara langsung. Melalui sistem daring, pengguna dapat membandingkan harga, memeriksa kondisi mobil, hingga menyelesaikan proses pembelian secara penuh secara online. Hal ini memberikan efisiensi waktu dan biaya yang signifikan bagi kedua belah pihak, sekaligus meningkatkan transparansi dalam transaksi. Tidak heran jika platform semacam ini kini menjadi salah satu pendorong utama perkembangan ekosistem otomotif digital di negara tersebut.\n",
+        "Perkembangan teknologi digital turut mempercepat pertumbuhan pasar mobil bekas. Kehadiran platform jual beli mobil secara online seperti **Syarah.com** memungkinkan proses transaksi dilakukan dengan lebih mudah dan efisien. Melalui platform ini, pengguna dapat melihat berbagai pilihan mobil, membandingkan harga, mengecek kondisi kendaraan, hingga menyelesaikan pembelian secara online tanpa harus datang langsung ke dealer. Proses digital ini membantu menghemat waktu dan biaya, sekaligus meningkatkan transparansi bagi penjual dan pembeli.\n",
         "\n",
-        "**Syarah.com** sendiri merupakan platform jual beli mobil online terkemuka asal Arab Saudi yang melayani transaksi mobil baru maupun bekas. Setiap mobil yang dijual telah melewati inspeksi ketat lebih dari 200 titik dan dilengkapi dengan garansi hingga satu tahun untuk menjamin kualitasnya. Selain itu, Syarah menyediakan layanan pembiayaan yang fleksibel serta opsi pengantaran mobil langsung ke rumah pembeli. Dengan proses yang sepenuhnya digital, pengguna dapat membeli mobil dengan mudah, aman, dan nyaman melalui situs atau aplikasi resmi mereka. Berbasis di Riyadh, Syarah kini dikenal sebagai salah satu marketplace otomotif terbesar dan paling terpercaya di Arab Saudi.\n",
+        "**Syarah.com** merupakan salah satu platform jual beli mobil online terbesar di Arab Saudi yang menyediakan mobil baru maupun bekas. Mobil yang dijual telah melalui proses inspeksi menyeluruh dan dilengkapi dengan garansi, sehingga pembeli merasa lebih aman. Selain itu, Syarah juga menawarkan layanan pembiayaan dan pengantaran mobil langsung ke rumah. Dengan sistem yang sepenuhnya digital, proses pembelian mobil menjadi lebih praktis dan nyaman bagi masyarakat.\n",
         "\n",
-        "Namun, besarnya variasi kondisi kendaraan membuat **penentuan harga yang wajar** menjadi tantangan tersendiri. Setiap mobil memiliki karakteristik unik berdasarkan tahun produksi, merek, tipe, serta jarak tempuh yang memengaruhi nilai jualnya. Tanpa alat bantu yang tepat, penjual bisa saja menetapkan harga terlalu tinggi sehingga mobilnya sulit terjual. Sebaliknya, harga yang terlalu rendah dapat menyebabkan kerugian finansial. Bagi pembeli, ketidaktahuan terhadap nilai pasar juga dapat membuat mereka membayar lebih mahal dari seharusnya."
+        "Meskipun demikian, menentukan harga mobil bekas yang tepat masih menjadi tantangan. Setiap mobil memiliki kondisi yang berbeda-beda, seperti tahun produksi, merek, tipe, dan jarak tempuh, yang sangat memengaruhi harga jualnya. Tanpa acuan yang jelas, penjual berisiko memasang harga terlalu tinggi sehingga mobil sulit terjual, atau terlalu rendah sehingga merugi. Di sisi lain, pembeli juga berpotensi membayar lebih mahal dari nilai pasar jika tidak memiliki informasi harga yang akurat."
       ]
     },
     {
@@ -25,10 +25,13 @@
       "source": [
         "## 1.2 Tujuan Bisnis\n",
         "\n",
-        "Melalui pendekatan **causal-based forecasting (regresi)**, penelitian ini bertujuan untuk membangun **model machine learning** yang mampu **memprediksi harga wajar mobil bekas di Arab Saudi** berdasarkan berbagai fitur penting, seperti merk, tipe, tahun produksi, ukuran mesin, jarak tempuh, region, serta opsi fitur yang dimiliki kendaraan. Model ini diharapkan dapat **mendukung pengambilan keputusan** bagi berbagai pemangku kepentingan di pasar mobil bekas, yaitu: \n",
-        "- Bagi **penjual**, model dapat digunakan untuk menentukan **harga listing yang kompetitif** sehingga peluang terjual lebih cepat meningkat tanpa mengorbankan potensi keuntungan. \n",
-        "- Bagi **pembeli**, model membantu menilai apakah harga sebuah mobil **tergolong wajar atau cenderung overpriced** dibandingkan kondisi dan karakteristiknya. \n",
-        "- Sementara bagi **platform**, model ini dapat dimanfaatkan untuk memberikan **rekomendasi dan insight harga pasar** secara lebih objektif dan terukur."
+        "Penelitian ini bertujuan untuk membangun **model machine learning berbasis regresi** yang dapat **memperkirakan harga mobil bekas yang wajar di Arab Saudi**. Prediksi dilakukan dengan mempertimbangkan berbagai informasi penting dari kendaraan, seperti **merek, tipe mobil, tahun produksi, ukuran mesin, jarak tempuh, lokasi penjualan, serta fitur yang dimiliki**.\n",
+        "\n",
+        "Model yang dibangun diharapkan dapat **membantu pengambilan keputusan** bagi berbagai pihak yang terlibat di pasar mobil bekas, antara lain:\n",
+        "\n",
+        "* **Bagi penjual**, model dapat membantu menentukan **harga jual yang masuk akal dan kompetitif**, sehingga mobil lebih cepat terjual tanpa harus menjual terlalu murah.\n",
+        "* **Bagi pembeli**, model dapat digunakan sebagai **acuan untuk menilai apakah harga mobil sudah sesuai atau terlalu mahal** dibandingkan dengan kondisi mobil tersebut.\n",
+        "* **Bagi platform jual beli**, model ini dapat dimanfaatkan untuk memberikan **gambaran harga pasar yang lebih objektif**, serta mendukung fitur rekomendasi dan analisis harga secara lebih terukur."
       ]
     },
     {
@@ -38,9 +41,14 @@
       "source": [
         "## 1.3 Pertanyaan Bisnis Utama\n",
         "\n",
-        "1. Faktor apa saja yang paling berpengaruh terhadap harga mobil bekas?\n",
-        "2. Seberapa akurat model dalam memprediksi harga?\n",
-        "3. Apakah model cukup baik untuk dijadikan referensi harga di platform?"
+        "1. **Faktor apa saja yang paling memengaruhi harga mobil bekas?**\n",
+        "   Misalnya apakah tahun produksi, merek, jarak tempuh, atau fitur tertentu memiliki pengaruh paling besar terhadap harga.\n",
+        "\n",
+        "2. **Seberapa dekat hasil prediksi model dengan harga mobil sebenarnya?**\n",
+        "   Pertanyaan ini bertujuan untuk melihat apakah model mampu memperkirakan harga dengan cukup akurat dan konsisten.\n",
+        "\n",
+        "3. **Apakah hasil prediksi model cukup layak digunakan sebagai acuan harga?**\n",
+        "   Baik sebagai referensi bagi penjual dan pembeli, maupun sebagai dasar rekomendasi harga di platform jual beli mobil bekas."
       ]
     },
     {
@@ -50,12 +58,11 @@
       "source": [
         "## 1.4 Definisi Keberhasilan\n",
         "\n",
-        "Keberhasilan model diukur berdasarkan kemampuan prediksinya dalam memperkirakan harga mobil bekas secara akurat dan konsisten. Evaluasi dilakukan menggunakan **metric utama** berupa **MAE (Mean Absolute Error)** dan **MAPE (Mean Absolute Percentage Error)**.\n",
+        "Model dikatakan berhasil jika mampu **memperkirakan harga mobil bekas dengan cukup dekat dari harga aslinya dan konsisten**. Untuk menilai hal tersebut, digunakan satu ukuran utama yaitu **Mean Absolute Error (MAE)**.\n",
         "\n",
-        "- **MAE** mengukur rata-rata selisih absolut antara harga aktual dan harga hasil prediksi, sehingga memberikan gambaran seberapa besar deviasi model terhadap nilai sebenarnya dalam satuan mata uang.\n",
-        "- **MAPE** mengukur persentase kesalahan relatif terhadap harga aktual, yang menunjukkan seberapa besar error model dalam konteks proporsional.\n",
+        "**MAE** menunjukkan **rata-rata selisih harga** antara hasil prediksi model dan harga sebenarnya dalam satuan Rupiah/SAR. Dengan kata lain, MAE menggambarkan **seberapa jauh rata-rata prediksi model meleset dari harga asli mobil**. Metrik ini dipilih karena **mudah dipahami**, tidak terlalu terpengaruh oleh harga mobil yang sangat mahal, dan sesuai dengan kebutuhan penentuan harga yang wajar.\n",
         "\n",
-        "Sebagai target awal, model dianggap berhasil apabila mencapai **MAE <= 20% dari median harga**, dengan ambang batas ini dapat disesuaikan sesuai kebutuhan bisnis dan karakteristik data."
+        "Sebagai patokan awal, model dianggap sudah cukup baik apabila **rata-rata selisih prediksi harga tidak melebihi 20% dari harga tengah (median) mobil**, dengan ketentuan ini dapat disesuaikan kembali sesuai kebutuhan bisnis."
       ]
     }
   ],
