--- a/Notebook/03_Modeling.ipynb
+++ b/Notebook/03_Modeling.ipynb
@@ -223,32 +223,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 3,
-      "id": "0006360d",
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0    114000.0\n",
-              "1     27500.0\n",
-              "2     43000.0\n",
-              "3     59500.0\n",
-              "4     72000.0\n",
-              "Name: Price, dtype: float64"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "y.head()"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "03937f82",
       "metadata": {},
@@ -265,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -274,7 +248,7 @@
               "((3824, 13), (957, 13))"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -307,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -325,7 +299,7 @@
               "  'Mileage_per_Year'])"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -350,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -390,16 +364,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def mean_absolute_percentage_error(y_true, y_pred):\n",
-        "    y_true = np.array(y_true)\n",
-        "    y_pred = np.array(y_pred)\n",
-        "    nonzero = y_true != 0\n",
-        "    return np.mean(np.abs((y_true[nonzero] - y_pred[nonzero]) / y_true[nonzero])) * 100\n",
-        "\n",
+        "from sklearn.metrics import mean_absolute_error\n",
         "\n",
         "def evaluate_regression(model, X_train, y_train, X_test, y_test, name='Model'):\n",
         "    y_train_pred = model.predict(X_train)\n",
@@ -407,13 +376,11 @@
         "\n",
         "    train_mae = mean_absolute_error(y_train, y_train_pred)\n",
         "    test_mae  = mean_absolute_error(y_test, y_test_pred)\n",
-        "    test_mape = mean_absolute_percentage_error(y_test, y_test_pred)\n",
         "\n",
         "    return {\n",
         "        'name': name,\n",
         "        'train_mae': train_mae,\n",
-        "        'test_mae': test_mae,\n",
-        "        'test_mape': test_mape\n",
+        "        'test_mae': test_mae\n",
         "    }"
       ]
     },
@@ -427,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "id": "78c97807",
       "metadata": {},
       "outputs": [],
@@ -468,11 +435,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "id": "20cae9c9",
       "metadata": {},
       "outputs": [],
       "source": [
+        "from sklearn.model_selection import KFold, cross_validate\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "import time\n",
+        "\n",
         "cv = KFold(n_splits=5, shuffle=True, random_state=42)\n",
         "\n",
         "# 🔹 Median harga (baseline bisnis)\n",
@@ -508,7 +480,6 @@
         "\n",
         "    y_test_pred = pipeline.predict(X_test)\n",
         "    test_mae = mean_absolute_error(y_test, y_test_pred)\n",
-        "    test_mape = mean_absolute_percentage_error(y_test, y_test_pred)\n",
         "\n",
         "    mae_pct_of_median_price = (test_mae / median_price) * 100\n",
         "\n",
@@ -518,9 +489,8 @@
         "        'cv_mae_std': cv_mae_std,\n",
         "        'cv_time_sec': cv_time,\n",
         "        'test_mae': test_mae,\n",
-        "        'test_mape': test_mape,\n",
         "        'mae_pct_of_median_price': mae_pct_of_median_price\n",
-        "    })\n"
+        "    })"
       ]
     },
     {
@@ -533,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "id": "f9213b35",
       "metadata": {},
       "outputs": [
@@ -563,7 +533,6 @@
               "      <th>cv_mae_std</th>\n",
               "      <th>cv_time_sec</th>\n",
               "      <th>test_mae</th>\n",
-              "      <th>test_mape</th>\n",
               "      <th>mae_pct_of_median_price</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -573,9 +542,8 @@
               "      <td>XGBoost</td>\n",
               "      <td>11667.193649</td>\n",
               "      <td>609.126626</td>\n",
-              "      <td>2.607130</td>\n",
+              "      <td>4.461608</td>\n",
               "      <td>11836.828687</td>\n",
-              "      <td>111.657030</td>\n",
               "      <td>20.585789</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -583,9 +551,8 @@
               "      <td>Random Forest</td>\n",
               "      <td>12412.367616</td>\n",
               "      <td>654.580974</td>\n",
-              "      <td>8.766347</td>\n",
+              "      <td>9.773739</td>\n",
               "      <td>12042.706972</td>\n",
-              "      <td>118.077111</td>\n",
               "      <td>20.943838</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -593,9 +560,8 @@
               "      <td>Gradient Boosting</td>\n",
               "      <td>14012.976773</td>\n",
               "      <td>708.901023</td>\n",
-              "      <td>2.522573</td>\n",
+              "      <td>2.668517</td>\n",
               "      <td>14265.768521</td>\n",
-              "      <td>118.046844</td>\n",
               "      <td>24.810032</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -603,9 +569,8 @@
               "      <td>Linear Regression</td>\n",
               "      <td>16673.627508</td>\n",
               "      <td>731.937124</td>\n",
-              "      <td>2.226960</td>\n",
+              "      <td>2.757387</td>\n",
               "      <td>15649.539260</td>\n",
-              "      <td>126.849432</td>\n",
               "      <td>27.216590</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -614,19 +579,19 @@
             ],
             "text/plain": [
               "               model   cv_mae_mean  cv_mae_std  cv_time_sec      test_mae  \\\n",
-              "3            XGBoost  11667.193649  609.126626     2.607130  11836.828687   \n",
-              "1      Random Forest  12412.367616  654.580974     8.766347  12042.706972   \n",
-              "2  Gradient Boosting  14012.976773  708.901023     2.522573  14265.768521   \n",
-              "0  Linear Regression  16673.627508  731.937124     2.226960  15649.539260   \n",
+              "3            XGBoost  11667.193649  609.126626     4.461608  11836.828687   \n",
+              "1      Random Forest  12412.367616  654.580974     9.773739  12042.706972   \n",
+              "2  Gradient Boosting  14012.976773  708.901023     2.668517  14265.768521   \n",
+              "0  Linear Regression  16673.627508  731.937124     2.757387  15649.539260   \n",
               "\n",
-              "    test_mape  mae_pct_of_median_price  \n",
-              "3  111.657030                20.585789  \n",
-              "1  118.077111                20.943838  \n",
-              "2  118.046844                24.810032  \n",
-              "0  126.849432                27.216590  "
+              "   mae_pct_of_median_price  \n",
+              "3                20.585789  \n",
+              "1                20.943838  \n",
+              "2                24.810032  \n",
+              "0                27.216590  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -654,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "id": "6367af4a",
       "metadata": {},
       "outputs": [],
@@ -689,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "id": "d2cf99e6",
       "metadata": {},
       "outputs": [
@@ -2184,7 +2149,7 @@
               "             scoring='neg_mean_absolute_error', verbose=1)"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2212,7 +2177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "id": "3ac3edbd",
       "metadata": {},
       "outputs": [
@@ -2226,7 +2191,7 @@
               " 'model__subsample': 0.8}"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2246,7 +2211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "id": "e853dc63",
       "metadata": {},
       "outputs": [
@@ -2274,7 +2239,6 @@
               "      <th>name</th>\n",
               "      <th>train_mae</th>\n",
               "      <th>test_mae</th>\n",
-              "      <th>test_mape</th>\n",
               "      <th>mae_improvement_pct</th>\n",
               "      <th>mae_pct_of_median_price</th>\n",
               "    </tr>\n",
@@ -2285,7 +2249,6 @@
               "      <td>XGBoost (Baseline)</td>\n",
               "      <td>7842.184547</td>\n",
               "      <td>11836.828687</td>\n",
-              "      <td>111.657030</td>\n",
               "      <td>0.00000</td>\n",
               "      <td>20.585789</td>\n",
               "    </tr>\n",
@@ -2294,7 +2257,6 @@
               "      <td>XGBoost (Tuned)</td>\n",
               "      <td>3920.132579</td>\n",
               "      <td>11197.748853</td>\n",
-              "      <td>111.089923</td>\n",
               "      <td>5.39908</td>\n",
               "      <td>19.474346</td>\n",
               "    </tr>\n",
@@ -2303,16 +2265,16 @@
               "</div>"
             ],
             "text/plain": [
-              "                 name    train_mae      test_mae   test_mape  \\\n",
-              "0  XGBoost (Baseline)  7842.184547  11836.828687  111.657030   \n",
-              "1     XGBoost (Tuned)  3920.132579  11197.748853  111.089923   \n",
+              "                 name    train_mae      test_mae  mae_improvement_pct  \\\n",
+              "0  XGBoost (Baseline)  7842.184547  11836.828687              0.00000   \n",
+              "1     XGBoost (Tuned)  3920.132579  11197.748853              5.39908   \n",
               "\n",
-              "   mae_improvement_pct  mae_pct_of_median_price  \n",
-              "0              0.00000                20.585789  \n",
-              "1              5.39908                19.474346  "
+              "   mae_pct_of_median_price  \n",
+              "0                20.585789  \n",
+              "1                19.474346  "
             ]
           },
-          "execution_count": 14,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2401,7 +2363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "id": "31723191",
       "metadata": {},
       "outputs": [
@@ -2458,7 +2420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "id": "e088f2ad",
       "metadata": {},
       "outputs": [
@@ -2501,7 +2463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "id": "f6e6a076",
       "metadata": {},
       "outputs": [
@@ -2509,7 +2471,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Model saved to: C:\\Users\\U1\\Documents\\arabian-cars-1\\Model\\xgb_tuned_mae11198_20251218.joblib\n"
+            "Model saved to: C:\\Users\\U1\\Documents\\arabian-cars-1\\Model\\xgb_tuned_mae11198_20251222.joblib\n"
           ]
         }
       ],
