--- a/Notebooks/03_Modeling.ipynb
+++ b/Notebooks/03_Modeling.ipynb
@@ -8,7 +8,7 @@
         "\n",
         "Notebook ini mengasumsikan bahwa dataset bersih sudah disimpan sebelumnya sebagai file:\n",
         "\n",
-        "`./Dataset/UsedCarsSA_Clean.csv`\n",
+        "`./Datasets/UsedCarsSA_Clean.csv`\n",
         "\n",
         "Jika belum ada, jalankan terlebih dahulu notebook notebook 02 untuk menghasilkan file tersebut."
       ]
@@ -196,7 +196,7 @@
         "pd.set_option('display.max_columns', None)\n",
         "\n",
         "# Load dataset bersih\n",
-        "data_path_clean = '../Dataset/UsedCarsSA_Clean.csv'\n",
+        "data_path_clean = '../Datasets/UsedCarsSA_Clean.csv'\n",
         "real_df = pd.read_csv(data_path_clean)\n",
         "df = real_df.copy()\n",
         "\n",
@@ -542,7 +542,7 @@
               "      <td>XGBoost</td>\n",
               "      <td>11667.193649</td>\n",
               "      <td>609.126626</td>\n",
-              "      <td>2.699722</td>\n",
+              "      <td>3.456213</td>\n",
               "      <td>11836.828687</td>\n",
               "      <td>20.585789</td>\n",
               "    </tr>\n",
@@ -551,7 +551,7 @@
               "      <td>Random Forest</td>\n",
               "      <td>12412.367616</td>\n",
               "      <td>654.580974</td>\n",
-              "      <td>8.940226</td>\n",
+              "      <td>9.843279</td>\n",
               "      <td>12042.706972</td>\n",
               "      <td>20.943838</td>\n",
               "    </tr>\n",
@@ -560,7 +560,7 @@
               "      <td>Gradient Boosting</td>\n",
               "      <td>14012.976773</td>\n",
               "      <td>708.901023</td>\n",
-              "      <td>2.920060</td>\n",
+              "      <td>2.793201</td>\n",
               "      <td>14265.768521</td>\n",
               "      <td>24.810032</td>\n",
               "    </tr>\n",
@@ -569,7 +569,7 @@
               "      <td>Linear Regression</td>\n",
               "      <td>16673.627508</td>\n",
               "      <td>731.937124</td>\n",
-              "      <td>2.349177</td>\n",
+              "      <td>2.844876</td>\n",
               "      <td>15649.539260</td>\n",
               "      <td>27.216590</td>\n",
               "    </tr>\n",
@@ -579,10 +579,10 @@
             ],
             "text/plain": [
               "               model   cv_mae_mean  cv_mae_std  cv_time_sec      test_mae  \\\n",
-              "3            XGBoost  11667.193649  609.126626     2.699722  11836.828687   \n",
-              "1      Random Forest  12412.367616  654.580974     8.940226  12042.706972   \n",
-              "2  Gradient Boosting  14012.976773  708.901023     2.920060  14265.768521   \n",
-              "0  Linear Regression  16673.627508  731.937124     2.349177  15649.539260   \n",
+              "3            XGBoost  11667.193649  609.126626     3.456213  11836.828687   \n",
+              "1      Random Forest  12412.367616  654.580974     9.843279  12042.706972   \n",
+              "2  Gradient Boosting  14012.976773  708.901023     2.793201  14265.768521   \n",
+              "0  Linear Regression  16673.627508  731.937124     2.844876  15649.539260   \n",
               "\n",
               "   mae_pct_of_median_price  \n",
               "3                20.585789  \n",
@@ -2454,7 +2454,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Model saved to: C:\\Users\\U1\\Documents\\arabian-cars-1\\Model\\xgb_tuned_mae11198_20251222.joblib\n"
+            "Model saved to: C:\\Users\\U1\\Documents\\arabian-cars-1\\Models\\xgb_tuned_mae11198_20251222.joblib\n"
           ]
         }
       ],
@@ -2466,7 +2466,7 @@
         "# =========================\n",
         "# 1. Folder Model (naik 1 level)\n",
         "# =========================\n",
-        "MODELS_DIR = Path('..') / 'Model'\n",
+        "MODELS_DIR = Path('..') / 'Models'\n",
         "MODELS_DIR.mkdir(exist_ok=True)\n",
         "\n",
         "# =========================\n",
