--- a/Notebooks/02_Data Acquisition And Understanding.ipynb
+++ b/Notebooks/02_Data Acquisition And Understanding.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -178,7 +178,7 @@
               "4    41912  Riyadh       59500       False  "
             ]
           },
-          "execution_count": 127,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -196,7 +196,7 @@
         "pd.set_option('display.max_columns', None)\n",
         "\n",
         "# Load dataset\n",
-        "data_path = '../Dataset/UsedCarsSA_Unclean_EN.csv'\n",
+        "data_path = '../Datasets/UsedCarsSA_Unclean_EN.csv'\n",
         "real_df = pd.read_csv(data_path)\n",
         "df = real_df.copy()\n",
         "df.head()"
@@ -206,7 +206,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Berikut adalah **deskripsi kolom** untuk dataset **[Saudi Arabia Used Cars](https://www.kaggle.com/datasets/turkibintalib/saudi-arabia-used-cars-dataset)**:\n",
+        "Berikut adalah **deskripsi kolom** untuk  **[Saudi Arabia Used Cars](https://www.kaggle.com/datasets/turkibintalib/saudi-arabia-used-cars-dataset)**:\n",
         "\n",
         "* **Link** — Tautan ke halaman iklan mobil di situs *syarah.com*.\n",
         "* **Make** — Nama perusahaan atau merek mobil.\n",
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 2,
       "id": "56bd6579",
       "metadata": {},
       "outputs": [
@@ -319,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 3,
       "id": "592ab46a",
       "metadata": {},
       "outputs": [
@@ -625,7 +625,7 @@
               "Negotiable        NaN         NaN  "
             ]
           },
-          "execution_count": 129,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -681,7 +681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -841,7 +841,7 @@
               "14                                             [Used]  "
             ]
           },
-          "execution_count": 130,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -906,7 +906,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 5,
       "id": "4912cb36",
       "metadata": {},
       "outputs": [
@@ -931,7 +931,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 131,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -973,7 +973,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 6,
       "id": "ac225b88",
       "metadata": {},
       "outputs": [
@@ -1113,7 +1113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 7,
       "id": "6956d04e",
       "metadata": {},
       "outputs": [
@@ -1204,7 +1204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 8,
       "id": "b603536a",
       "metadata": {},
       "outputs": [
@@ -1295,7 +1295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 9,
       "id": "ba18c892",
       "metadata": {},
       "outputs": [
@@ -1394,7 +1394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 10,
       "id": "6e104aca",
       "metadata": {},
       "outputs": [
@@ -1411,7 +1411,7 @@
               "np.int64(0)"
             ]
           },
-          "execution_count": 136,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1479,7 +1479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 11,
       "id": "c967663f",
       "metadata": {},
       "outputs": [
@@ -1489,7 +1489,7 @@
               "(8248, 12)"
             ]
           },
-          "execution_count": 137,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1524,7 +1524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 12,
       "id": "3cb63618",
       "metadata": {},
       "outputs": [
@@ -1565,7 +1565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 13,
       "id": "bc330727",
       "metadata": {},
       "outputs": [
@@ -1653,7 +1653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 14,
       "id": "dbfc27e3",
       "metadata": {},
       "outputs": [
@@ -1751,7 +1751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 15,
       "id": "4763a429",
       "metadata": {},
       "outputs": [],
@@ -1815,7 +1815,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 16,
       "id": "28ec2f05",
       "metadata": {},
       "outputs": [
@@ -1908,7 +1908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 17,
       "id": "b16f538b",
       "metadata": {},
       "outputs": [
@@ -2001,7 +2001,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 18,
       "id": "06f9ee37",
       "metadata": {},
       "outputs": [
@@ -2094,7 +2094,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 19,
       "id": "a9a92aa7",
       "metadata": {},
       "outputs": [
@@ -2191,7 +2191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 20,
       "id": "59fe59dd",
       "metadata": {},
       "outputs": [
@@ -2228,7 +2228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 21,
       "id": "4403b344",
       "metadata": {},
       "outputs": [
@@ -2265,7 +2265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 22,
       "id": "acda230b",
       "metadata": {},
       "outputs": [
@@ -2302,7 +2302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 23,
       "id": "7ddec250",
       "metadata": {},
       "outputs": [
@@ -2340,7 +2340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 24,
       "id": "6ff37fc5",
       "metadata": {},
       "outputs": [
@@ -2377,7 +2377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 25,
       "id": "1c97a108",
       "metadata": {},
       "outputs": [
@@ -2414,7 +2414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 26,
       "id": "a48d8d46",
       "metadata": {},
       "outputs": [
@@ -2459,7 +2459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": 27,
       "id": "df2e1819",
       "metadata": {},
       "outputs": [
@@ -2549,7 +2549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": 28,
       "id": "18e1368b",
       "metadata": {},
       "outputs": [
@@ -2587,7 +2587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 29,
       "id": "5761e9ea",
       "metadata": {},
       "outputs": [
@@ -2633,7 +2633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": 30,
       "id": "c89ba2c2",
       "metadata": {},
       "outputs": [
@@ -2646,7 +2646,7 @@
         }
       ],
       "source": [
-        "df.to_csv('../Dataset/UsedCarsSA_Clean.csv', index=False)\n",
+        "df.to_csv('../Datasets/UsedCarsSA_Clean.csv', index=False)\n",
         "print('Dataset bersih berhasil disimpan!')"
       ]
     }
